src/lib/syntax/parser/snapshots/catlang__syntax__parser__statement__tests__delete_statement.snap
---
source: src/lib/syntax/parser/statement.rs
expression: res
---
(7:12) Delete(
    DeleteStatement {
        deleted: (7:12) "myVar",
    },
)
