src/lib/syntax/parser/snapshots/catlang__syntax__parser__statement__tests__inner_block_statement.snap
---
source: src/lib/syntax/parser/statement.rs
expression: res
---
(0:17) InnerBlock(
    (0:17) Block {
        elements: [
            (2:14) Declaration(
                (2:14) Declaration {
                    attributes: [],
                    declarator: Constant(
                        ConstantDeclarator {
                            identifier: (8:10) "PI",
                            type_expression: None,
                            expression: (13:14) PrimitiveExpression(
                                DecimalNumber(
                                    "3",
                                ),
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
