src/lib/syntax/parser/snapshots/catlang__syntax__parser__statement__tests__return_statement.snap
---
source: src/lib/syntax/parser/statement.rs
expression: res
---
(7:8) Jump(
    Return(
        (7:8) PrimitiveExpression(
            DecimalNumber(
                "3",
            ),
        ),
    ),
)
